<resources>
    <string name="app_name">git-set-code</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="addressLabel">Your Address:</string>
    <string name="destinationAddress">Your Destination:</string>
    <string name="submitButton">Save Location</string>
    <string name="viewButton">View Locations</string>
    <string name="highAccuracy">High Accuracy Mode</string>
    <string name="lowAccuracy">Battery Saver Mode</string>
    <string name="viewMap">View Map</string>
    <string name="deletButton">Clear All</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="fuel_stick_reading">Fuel Stick Reading</string>
</resources>