<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.32"
        android:background="@drawable/orange_bg"
        app:layout_constraintBottom_toTopOf="@id/useID_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.32"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/todo"
            android:src="@drawable/aims_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/useID_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="62dp"
        android:background="@drawable/orange_border_rounded_cornwe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bg"
        app:layout_constraintWidth_percent="0.78">

        <EditText
            android:id="@+id/userID_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/userID_icon"
            android:autofillHints="username"
            android:background="@android:color/transparent"
            android:fontFamily="@font/enceladusdemi"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp"
            android:ellipsize="end"
            android:textColorHint="#989898"/>

        <ImageView
            android:id="@+id/userID_icon"
            android:layout_width="22dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="17dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/user_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="62dp"
        android:background="@drawable/orange_border_rounded_cornwe"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/useID_layout">

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/passoword_icon"
            android:autofillHints="password"
            android:background="@android:color/transparent"
            android:fontFamily="@font/enceladusdemi"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="12"
            android:maxLines="1"
            android:paddingStart="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp"
            android:ellipsize="end"
            android:textColorHint="#989898"/>

        <ImageView
            android:id="@+id/passoword_icon"
            android:layout_width="20dp"
            android:layout_height="22dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="17dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/password_icon" />
    </RelativeLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="62dp"
        android:background="@drawable/orange_fill__rounded_color"
        android:fontFamily="@font/enceladusbold"
        android:gravity="center"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>